--- a/index.html
+++ b/index.html
@@ -20,7 +20,24 @@
     </header>
     <!-- main body -->
     <main>
-        <!-- template one -->
+    <!-- template one -->
+    <div class="container">
+        <div class="banner-image">
+            <img src="/images/person.png" alt="">
+        </div>
+        <div class="banner">
+            <h1 class="template-title">My failures of previous year</h1>
+            <p class="template-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+            <ul class="list-item">
+                <li>Contrary to popular belief, is not simply</li>
+                <li>Contrary to popular belief.</li>
+                <li>Contrary to popular , is not simply.</li>
+                <li>Contrary to popular belief, is not simply.</li>
+                <li>Contrary to popular simply.</li>
+            </ul>
+        </div>
+    </div>
+    
     </main>
 </body>
 </html>
