--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- template one -->
     <div class="container">
         <div class="banner-image">
-            <img src="/images/person.png" alt="">
+            <img src="./images/person.png" alt="">
         </div>
         <div class="banner">
             <h1 class="template-title">My failures of previous year</h1>
