--- a/index.html
+++ b/index.html
@@ -21,22 +21,56 @@
     <!-- main body -->
     <main>
     <!-- template one -->
-    <div class="container">
-        <div class="banner-image">
-            <img src="./images/person.png" alt="">
+    <section>
+        <div class="container">
+            <div class="banner-image">
+                <img src="./images/person.png" alt="">
+            </div>
+            <div class="banner">
+                <h1 class="template-title">My failures of previous year</h1>
+                <p class="template-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <ul class="list-item">
+                    <li>Contrary to popular belief, is not simply</li>
+                    <li>Contrary to popular belief.</li>
+                    <li>Contrary to popular , is not simply.</li>
+                    <li>Contrary to popular belief, is not simply.</li>
+                    <li>Contrary to popular simply.</li>
+                </ul>
+            </div>
         </div>
-        <div class="banner">
-            <h1 class="template-title">My failures of previous year</h1>
-            <p class="template-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
-            <ul class="list-item">
-                <li>Contrary to popular belief, is not simply</li>
-                <li>Contrary to popular belief.</li>
-                <li>Contrary to popular , is not simply.</li>
-                <li>Contrary to popular belief, is not simply.</li>
-                <li>Contrary to popular simply.</li>
-            </ul>
+    </section>
+    <!--plans-->
+    <section>
+            <div class="plans">
+                <div>
+                    <h1 class="plan">My Plans</h1>
+                </div>
+                    <div class="plans-details">
+                        <div>
+                            <img src="./images/icons/web.png" alt="" class="plan-image">
+                            <h2 class="plan-title">Web Development</h2>
+                            <p class="plan-sub-title">I want to start</p>
+                        </div>
+                        <div>
+                            <img src="./images/icons/js.png" alt="" class="plan-image">
+                            <h2 class="plan-title">Javascript</h2>
+                            <p class="plan-sub-title">I want to learn</p>
+                        </div>
+                        <div>
+                            <img src="./images/icons/smoke.png" alt="" class="plan-image">
+                            <h2 class="plan-title">Smoking Habit</h2>
+                            <p class="plan-sub-title">I want to end</p>
+                        </div>
+                        <div>
+                            <img src="./images/icons/ecom.png" alt="" class="plan-image">
+                            <h2 class="plan-title">ecommerce</h2>
+                            <p class="plan-sub-title">I want to develop</p>
+                        </div>
+                </div>
+            </div>
         </div>
-    </div>
+    </section>
+    <!-- image and gradient -->
     
     </main>
 </body>
