--- a/index.html
+++ b/index.html
@@ -71,7 +71,29 @@
         </div>
     </section>
     <!-- image and gradient -->
-    
+    <section>
+        <div class="gradient">
+            <h1 class="gradient-title">Awlays keep a positive mindset</h1>
+            <button class="btn-call">Call now</button>
+        </div>
+    </section>
+    <!-- footer -->
+    <footer>
+        <div class="footer">
+            <div class="section-footer-description">
+                <h1 class="footer-title">Future</h1>
+                <p class="footer-description">There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration <br> in some form, by injected humour, or randomised words</p>
+                <p class="contact-email">Email : info@gmail.com</p>
+                <p class="contact">Phone : 01775245531</p>
+                <img class="social-fb" src="./images/icons/fb.png" alt="">
+                <img class="social-tw" src="./images/icons/twitter.png" alt="">
+                <img class="social-yt" src="/images/icons/youtube.png" alt="">
+            </div>
+            <div class="form">
+                <h3 class="Subscribe">Subscribe</h3>
+                <input class="mail" type="email" name="" id="" placeholder="Enter your email"> <br>
+                <button class="submit">Subscribe</button>
+    </footer>
     </main>
 </body>
 </html>
