--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <!-- header -->
+    <!-------------header----------->
     <header>
         <div>
             <div class="header-content">
@@ -18,9 +18,9 @@
             </div>
         </div>
     </header>
-    <!-- main body -->
+    <!------------main body--------->
     <main>
-    <!-- template one -->
+    <!--------template one---------->
     <section>
         <div class="container">
             <div class="banner-image">
@@ -39,7 +39,32 @@
             </div>
         </div>
     </section>
-    <!--plans-->
+    <!------------about------->
+    <section class="about">
+        <h3 class="section-title">About Me</h3>
+        <p class="section-description">I, m a Youtuber with a passion for motivational speaking and saving nature. I enjoy my life event sharing with others and making everyone happy. Being happy with myself means being happy with nature. I provide special counseling for those who seek haven on earth. Thousands of clients have procured exceptional results while working with me. Delivering work within time and budget which meets client's requirements in our mata</p>
+
+        <div class="about-info-container">
+            <div class="about-info">
+                <p class="info-title">Name:</p>
+                <p class="info-description">Kate Winslet</p>
+            </div>
+            <div class="about-info">
+                <p class="info-title">Email:</p>
+                <p class="info-description">Info@gmail.com</p>
+            </div>
+            <div class="about-info">
+                <p class="info-title">Date of birth:</p>
+                <p class="info-description">08 December 1996</p>
+            </div>
+            <div class="about-info">
+                <p class="info-title">Location:</p>
+                <p class="info-description">Melbourne VIC, Australia</p>
+            </div>
+        </div>
+
+      </section>
+    <!-----------plans----------->
     <section>
             <div class="plans">
                 <div>
@@ -70,14 +95,14 @@
             </div>
         </div>
     </section>
-    <!-- image and gradient -->
+    <!----image and gradient------->
     <section>
         <div class="gradient">
             <h1 class="gradient-title">Awlays keep a positive mindset</h1>
             <button class="btn-call">Call now</button>
         </div>
     </section>
-    <!-- footer -->
+    <!-----------footer----------->
     <footer>
         <div class="footer">
             <div class="section-footer-description">
