--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <p class="contact">Phone : 01710000000</p>
                 <img class="social-fb" src="./images/icons/fb.png" alt="">
                 <img class="social-tw" src="./images/icons/twitter.png" alt="">
-                <img class="social-yt" src="/images/icons/youtube.png" alt="">
+                <img class="social-yt" src="/images/icons/fb.png" alt="">
             </div>
             <div class="form">
                 <h3 class="Subscribe">Subscribe</h3>
